# Eindproject_overstimulation_and_lifestyle

./: .gitignore  README.md  Voorbereiding.ipynb  home.py  index.py  pyproject.toml  requirements.txt
client/: .env  communication.py  home.py  home_old.py
client/.streamlit/: config.toml
client/auth/: authentication.py
client/connection/: connection.py  socketsManager.py
client/pages/: 1_overstimulated_by_age.py  2_calc.py  2_stress_by_sleep_and_overstimulation.py  2_test.py  3_depression_by_social_interaction_and_screentime.py  4_headaches_by_exercises_and_overthinking.py
dataset/: dataset.csv
pages/: 1_test.py  login.py  test.py
server/: .env  allowed_users.json  clienthandler.py  home.py  queries.json  search.py  server.py  users.json
server/pages/: queries.py  users_info.py
