[project]
name = "eindproject-overstimulation-and-lifestyle"
version = "0.1.0"
description = ""
authors = [
    {name = "Aléssia Vinnik",email = "alessia.vinnik@student.howest.be"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "anyio (==4.9.0)",
    "asttokens (==3.0.0)",
    "backports-tarfile (==1.2.0)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.2)",
    "certifi (==2025.1.31)",
    "charset-normalizer (==3.4.1)",
    "cleo (==2.1.0)",
    "colorama (==0.4.6)",
    "comm (==0.2.2)",
    "contourpy (==1.3.1)",
    "crashtest (==0.4.1)",
    "cycler (==0.12.1)",
    "debugpy (==1.8.13)",
    "decorator (==5.2.1)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.8)",
    "executing (==2.2.0)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.18.0)",
    "findpython (==0.6.3)",
    "fonttools (==4.57.0)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "importlib-metadata (==8.6.1)",
    "installer (==0.7.0)",
    "ipykernel (==6.29.5)",
    "ipython (==9.0.2)",
    "ipython-pygments-lexers (==1.1.1)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jedi (==0.19.2)",
    "joblib (==1.4.2)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.7.2)",
    "keyring (==25.6.0)",
    "kiwisolver (==1.4.8)",
    "matplotlib (==3.10.1)",
    "matplotlib-inline (==0.1.7)",
    "more-itertools (==10.6.0)",
    "msgpack (==1.1.0)",
    "nest-asyncio (==1.6.0)",
    "numpy (==2.2.4)",
    "packaging (==24.2)",
    "pandas (==2.2.3)",
    "parso (==0.8.4)",
    "pbs-installer (==2025.3.17)",
    "pillow (==11.1.0)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.7)",
    "poetry (==2.1.2)",
    "poetry-core (==2.1.2)",
    "prompt-toolkit (==3.0.50)",
    "psutil (==7.0.0)",
    "pure-eval (==0.2.3)",
    "pygments (==2.19.1)",
    "pyparsing (==3.2.3)",
    "pyproject-hooks (==1.2.0)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "pywin32 (==310)",
    "pywin32-ctypes (==0.2.3)",
    "pyzmq (==26.3.0)",
    "rapidfuzz (==3.12.2)",
    "requests (==2.32.3)",
    "requests-toolbelt (==1.0.0)",
    "scikit-learn (==1.6.1)",
    "scipy (==1.15.2)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "stack-data (==0.6.3)",
    "threadpoolctl (==3.6.0)",
    "tomlkit (==0.13.2)",
    "tornado (==6.4.2)",
    "traitlets (==5.14.3)",
    "trove-classifiers (==2025.3.19.19)",
    "typing-extensions (==4.13.0)",
    "tzdata (==2025.2)",
    "urllib3 (==2.3.0)",
    "virtualenv (==20.30.0)",
    "wcwidth (==0.2.13)",
    "zipp (==3.21.0)",
    "zstandard (==0.23.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
